--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                         <button type="submit" class="btn btn-login w-100">Login</button>
                         <div class="login-footer">
                             <p>Tidak punya akun? <a href="register.html">Register</a></p>
+                            <p>Tolong daftar dulu dengan id dan password apa saja nanti bisa login</p>
                         </div>
                     </form>
                 </div>
