--- a/dasboard.html
+++ b/dasboard.html
@@ -32,6 +32,17 @@
             top: 10px;
             right: 10px;
         }
+        }
+        .header-title {
+            font-size: 2.5rem;
+            font-weight: bold;
+            background: linear-gradient(90deg, #007bff, #6610f2); 
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-align: center;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); 
+            margin-bottom: 20px; 
+        }
     </style>
 </head>
 <body>
