--- a/dasboard.html
+++ b/dasboard.html
@@ -12,7 +12,8 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f8f9fa;
+            background: linear-gradient(135deg, #1a1f29 0%, #2c1f3a 100%);
+            color: #e2e8f0;
         }
         .sidebar {
             min-height: 100vh;
@@ -31,6 +32,32 @@
             position: absolute;
             top: 10px;
             right: 10px;
+        }
+        .header-title {
+            position: relative;
+            padding: 20px;
+            color: white;
+            text-align: center;
+            font-size: 3rem;
+            font-family: 'Poppins', sans-serif; 
+            background: linear-gradient(135deg, #00fa9a, #8a2be2);
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            margin-bottom: 2rem;
+            text-shadow: 0 0 10px rgba(138, 43, 226, 0.7), 0 0 20px rgba(0, 250, 154, 0.5);
+            z-index: 1;
+        }
+
+        .header-title::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
+            z-index: -1;
         }
     </style>
 </head>
