--- a/login.html
+++ b/login.html
@@ -244,7 +244,7 @@
             
             if (user) {
                 localStorage.setItem('currentUser', JSON.stringify(user));
-                window.location.href = 'dasboard.html';
+                window.location.href = 'index.html';
             } else {
                 alert('Username atau password salah!');
             }
