--- a/karyawan.html
+++ b/karyawan.html
@@ -82,7 +82,7 @@
         </div>
         
         <div class="container mt-4">
-            <a href="index.html" class="btn btn-outline-danger logout-btn">
+            <a href="login.html" class="btn btn-outline-danger logout-btn">
                 <i class="fas fa-sign-out-alt"></i> Logout
             </a>
 
