--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Welcome, <small>Administrator</small></p>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a href="dasboard.html" class="nav-link text-white active"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
+                    <a href="index.html" class="nav-link text-white active"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
                 </li>
                 <li class="nav-item">
                     <span class="nav-link text-white">MENU KARYAWAN</span>
